<resources>
    <string name="app_name">biochicoasApp</string>
    <string name="iniciar_sesion_upper">INICIAR SESIÓN</string>
    <string name="iniciar_sesion_lower">Iniciar Sesión</string>
    <string name="registro">REGISTRO</string>
    <string name="chat">CHAT</string>
    <string name="restablecer_contra">RESTABLECIMIENTO DE CONTRASEÑA</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="disponibilidad">DISPONIBILIDAD</string>
    <string name="confirmacion">CONFIRMACIÓN</string>
    <string name="paquetes">PAQUETES</string>
    <string name="documentacion">DOCUMENTACIÓN</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvidar_contrasena"><u>He olvidado mi contraseña</u></string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate_aqui"><u>Registrate Aquí</u></string>
    <string name="restablecer_contrasena">RESTABLECER CONSTRASEÑA</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="enviar_documentacion">ENVIAR DOCUMENTACION</string>
    <string name="registrarse_redes_sociales">Registrarse con redes sociales</string>
    <string name="ya_tengo_cuenta">Ya tengo una cuenta</string>
    <string name="visita_web">Visita nuestro portal web</string>
    <string name="home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="escribe_correo">Escribe tu correo electrónico para recibir la documentación</string>
    <string name="selecciona_fecha">Selecciona la fecha</string>
    <string name="selecciona_hora">Selecciona la hora</string>
    <string name="selecciona_paquete">Selecciona el paquete de tu preferencia</string>
    <string name="reservar">RESERVAR</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="cienaga">Ciénaga</string>
    <string name="centro_reserva">Centro de Reserva Hídrica</string>
    <string name="motor_canoa">Motor Canoa</string>
    <string name="canoa_grande">Canoa Turística Grande</string>
    <string name="canoa_pequena">Canoa Turística Pequeña</string>
    <string name="numero_personas">Número de Personas</string>
    <string name="solo_recorrido">Sólo Recorrido</string>
    <string name="combo">Recorrido + Hotel + Alimentación</string>
    <string name="verifica_recorrido">Verifica tu recorrido e itinerario</string>
    <string name="reserva">Reserva #</string>
    <string name="fecha">Fecha:</string>
    <string name="horario">Horario:</string>
    <string name="transporte">Transporte:</string>
    <string name="lugar">Lugar:</string>
    <string name="paquete">Paquete:</string>
    <string name="ejemplo_reserva">502</string>
    <string name="ejemplo_fecha">06/08/2024</string>
    <string name="ejemplo_horario">16:00-17:00</string>
    <string name="ejemplo_transporte">Motor Canoa</string>
    <string name="ejemplo_paquete">Sólo Recorrido</string>
    <string name="ejemplo_personas">2</string>
    <string name="ejemplo_lugar">Ciénaga</string>
    <string name="reservar_pagar">RESERVAR Y PAGAR</string>
    <string name="pagar">PAGAR</string>
    <string name="metodos_pago">Métodos de Pago</string>
    <string name="tarjeta_credito">Tajeta de Crédito</string>
    <string name="tarjeta_debito">Tarjeta de Débito</string>
    <string name="pse">PSE</string>
    <string name="chatea_con_nosotros">Chatea con nosotros para mayor información</string>
    <string name="mensaje_ejemplo">Bienvenido a Biochicoas ¿En qué podemos ayudarte el día de hoy?</string>
    <string name="mensaje_respuesta_ejemplo">¡Hola!</string>
    <string name="enviar">ENVIAR</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>