<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green_background"
    tools:context=".PaymentFragment">

    <ImageView
        android:id="@+id/imgViewBiochicoas"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:srcCompat="@drawable/logo_biochicoas_fondo_transp" />

    <TextView
        android:id="@+id/txtViewConfirmacion"
        style="@style/main_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmacion"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/imgViewBiochicoas" />


    <TextView
        android:id="@+id/TxtViewVerificaRecorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/verifica_recorrido"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtViewConfirmacion"
        app:layout_constraintBottom_toTopOf="@id/cvReserva"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvReserva"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/green_background"
        app:layout_constraintTop_toBottomOf="@id/TxtViewVerificaRecorrido"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toTopOf="@id/cvMetodosPago">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTitleReserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/reserva" />

            <TextView
                android:id="@+id/tvReserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/ejemplo_reserva" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvMetodosPago"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/green_background"
        app:layout_constraintTop_toBottomOf="@id/cvReserva"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toTopOf="@id/btnPagar">

        <TextView
            android:id="@+id/tvTitleMetodosPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/metodos_pago"
            android:layout_marginVertical="15dp"
            android:textStyle="bold"/>


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <RadioButton
                android:id="@+id/rbTarjetaCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tarjeta_credito" />

            <RadioButton
                android:id="@+id/rbTarjetaDebito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tarjeta_debito" />

            <RadioButton
                android:id="@+id/rbPse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pse" />

        </RadioGroup>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnPagar"
        style="@style/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pagar"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/cvInfoReserva"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>