<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green_background"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/imgViewBiochicoas"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:srcCompat="@drawable/logo_biochicoas_fondo_transp" />

    <TextView
        android:id="@+id/txtViewBienvenido"
        style="@style/main_text"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/bienvenido"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/imgViewBiochicoas" />

    <Button
        android:id="@+id/btnPaquetes"
        style="@style/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/paquetes"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtViewBienvenido"/>

    <Button
        android:id="@+id/btnDisponibilidad"
        style="@style/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/disponibilidad"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/btnPaquetes" />

    <Button
        android:id="@+id/btnDocumentacion"
        style="@style/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/documentacion"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/btnDisponibilidad" />

    <Button
        android:id="@+id/btnChat"
        style="@style/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/btnDocumentacion" />

    <TextView
        android:id="@+id/TxtViewWeb"
        style="@style/link_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/visita_web"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/btnChat"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>